# unicode-width

./: .clang-format  .gitignore  CMakeLists.txt  README.md  unicode_width.hpp
include/sc/: unicode_width.hpp
scripts/: generate.py
tests/: CMakeLists.txt  test.cpp
